[package]
name = "rasta-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "scils_localhost"

[build-dependencies]
bindgen = "0.65.1"
cmake = "0.1.49"

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.16.0"
sci-rs = { git = "https://github.com/Mese96/rasta-rs/", version = "0.1.0" }
